--- a/index.html
+++ b/index.html
@@ -4,173 +4,243 @@
 <head>
   <meta charset="utf-8">
   <title>TinDog</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <!-- fontawesome-icon -->
+  <script src="https://kit.fontawesome.com/449622b41f.js" crossorigin="anonymous"></script>
+  <!-- googlefonts-ubuntu -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
+  <!-- googlefonts-montserrat -->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<!-- bootstrap-->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+  <!-- javascript -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/styles.css">
-
-
 </head>
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
+    <div class="container-fluid">
 
-    <!-- Nav Bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light ">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">TinDog </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="nav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="#">Something else here</a></li>
-              </ul>
-            </li>
 
-          </ul>
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark  ">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#"> TinDog </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="nav">
+            <ul class="navbar-nav ljeddy ml-auto">
+              <li class="nav-item">
+                <a class="nav-link " aria-current="page" href="#">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Pricing</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#" >
+                  Download
+                </a>
 
+              </li>
+
+            </ul>
+
+          </div>
+        </div>
+      </nav>
+
+
+
+      <!-- Title -->
+
+      <div class="row matt">
+        <div class="col-lg-6 col-md-6  ">
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
+          <button class="btn btn-dark btn-lg download-btn" type="button"> <i class="fab fa-apple"></i>Download</button>
+          <button class="btn btn-light btn-lg download-btn " type="button"> <i class="fab fa-google-play"></i>Download</button>
+        </div>
+        <div class="col-lg-6 col-md-6">
+          <div>
+            <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+          </div>
         </div>
       </div>
-    </nav>
-
-
-
-    <!-- Title -->
-
-    <div>
-      <h1>Meet new and interesting dogs nearby.</h1>
-      <button type="button">Download</button>
-      <button type="button">Download</button>
-    </div>
-    <div>
-      <img src="images/iphone6.png" alt="iphone-mockup">
-    </div>
-
   </section>
 
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
 
-    <h3>Easy to use.</h3>
-    <p>So easy to use, even your dog could do it.</p>
+      <div class="row  features-content">
+        <div class="col-lg-4 col-md-12 ">
+            <i class="fa fa-check-circle feature-icon"></i>
+          <h3 class="feature-header">Easy to use.</h3>
+          <p class="feature-text">So easy to use, even your dog could do it.</p>
+        </div>
+        <div class="col-lg-4 col-md-12 c-2">
+            <i class="fa fa-bullseye  feature-icon"></i>
+          <h3 class="feature-header">Elite Clientele</h3>
+          <p  class="feature-text">We have all the dogs, the greatest dogs.</p>
+        </div>
+        <div class="col-lg-4 col-md-12 c-3">
+            <i class="fa fa-heart feature-icon"></i>
+          <h3 class="feature-header">Guaranteed to work.</h3>
+          <p class="feature-text">Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
 
-    <h3>Elite Clientele</h3>
-    <p>We have all the dogs, the greatest dogs.</p>
 
-    <h3>Guaranteed to work.</h3>
-    <p>Find the love of your dog's life or your money back.</p>
+
 
   </section>
 
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
+    <div id="testimonials-carousel" class="carousel slide" data-ride="false" data-interval='5000' data-hover='pause'>
+      <!-- carousel indicators -->
+      <ul class="carousel-indicators">
+        <li class="active" data-target="#testimonials-carousel" data-slide-to="0"></li>
+        <li  data-target="#testimonials-carousel" data-slide-to="1"></li>
+      </ul>
+      <!-- carousel content -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2 class="testimonials-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <img class="testimonial-image"src="images/dog-img.jpg" alt="dog-profile">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item ">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
+        </div>
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+        <!-- carousel arrows -->
+        <a  class="carousel-control-prev" href="#testimonials-carousel"  data-slide="prev" >
+          <span class="carousel-control-prev-icon"></span>
+          <span class="sr-only">  previous </span>
+        </a>
+        <a  class="carousel-control-next" href="#testimonials-carousel" data-slide="next" >
+          <span class="carousel-control-next-icon"></span>
+          <span class="sr-only">  Next </span>
+        </a>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
+    </div>
+
+
+
 
   </section>
 
 
   <!-- Press -->
 
-  <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+  <section class="colored-section" id="press">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
-
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+    <div class="row">
+      <div class="col-lg-4 col-md-6 pricing-column">
+        <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="pricing-text">Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-outline-dark btn-lg btn-block" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 pricing-column">
+        <div class="card">
+          <div class="card-header">
+              <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="pricing-text">$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+          <a href="#"> <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button></a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-md-6 pricing-column">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2 class="pricing-text">$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
   </section>
 
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+        <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
 
+        <button class="btn btn-dark btn-lg download-btn  " class="cta-btn"> <i class=" fab fa-apple"></i> Download</button>
+        <button class="btn btn-light btn-lg download-btn " class="cta-btn"> <i class=" fab fa-google-play"></i> Download</button>
+
+      
   </section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-
-    <p>© Copyright 2018 TinDog</p>
+  <footer class="white-section" id="footer">
+      <span>
+        <i class="fab fa-twitter  footer-icon"></i>
+      </span>
+      <span>
+        <i class="fab fa-facebook footer-icon"></i>
+      </span>
+      <span>
+        <i class="fab fa-instagram footer-icon"></i>
+      </span>
+      <span>
+        <i class="fa fa-envelope  footer-icon"></i>
+      </span>
+    <p class="footer-text">© Copyright 2018 TinDog</p>
 
   </footer>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"
-    integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js"
-    integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous">
-  </script>
-
 
 </body>
 
